# MultiThreaded-Socket

./: .gitignore  .gitmodules  CLAUDE.md  MS Network API test.sln  README.md  docker-compose.yml  mount-nfs.sh
SimipleNetworkProtocol/: CMakeLists.txt  cmake_install.cmake
SimipleNetworkProtocol/LockedList/: CMakeLists.txt
SimipleNetworkProtocol/Queue/: CMakeLists.txt
SimipleNetworkProtocol/Queue/include/: Queue.hpp
SimipleNetworkProtocol/Queue/src/: Queue.cpp
SimipleNetworkProtocol/src/: .clang-tidy  BufferOwner.cpp  BufferOwner.h  Connection.cpp  Connection.h  Connection.hpp  ConnectionAddr.h  ConnectionAddr.hpp  ConnectionID.hpp  ConnectionKey.cpp  ConnectionKey.h  ConnectionKey.hpp  FastTransportPacket.h  FastTransportProtocol.cpp  FastTransportProtocol.h  FastTransportProtocol.hpp  HeaderBuffer.cpp  HeaderBuffer.h  HeaderBuffer.hpp  HeaderTypes.hpp  IConnectionState.cpp  IConnectionState.h  IConnectionState.hpp  IInFilghtQueue.cpp  IInFilghtQueue.h  IInFilghtQueue.hpp  IInFlightQueue.hpp  IPacket.h  IPacket.hpp  IRecvQueue.h  IRecvQueue.hpp  ISendQueue.h  ISendQueue.hpp  ISocketQueues.hpp  ISpeedControllerState.hpp  InFilghtQueue.cpp  InFlightQueue.cpp  InFlightQueue.hpp  LinuxConsoleApplication.vcxproj  LinuxConsoleApplication.vcxproj.filters  (+47 more)
SimipleNetworkProtocol/src/Allocator/: SimpleAllocator.h  SimplePtr.h
SimpleNetworkProtocol/: .clang-tidy  CMakeLists.txt  cmake-kits.json  cmake_install.cmake  main.cpp  main_client.cpp  main_server.cpp  mapping.impl  pch.hpp  sysctl.conf
SimpleNetworkProtocol/FileSystem/: CMakeLists.txt  hello  hello.c  main.c
SimpleNetworkProtocol/FileSystem/include/: ByteStream.hpp  File.hpp  FileHandle.hpp  FileSystem.hpp  FileTree.hpp  FileTreeSerializer.hpp  FuseRequestTracker.hpp  IPendingJob.hpp  InotifyWatcher.hpp  Leaf.hpp  LeafSerializer.hpp  LocalFileHandle.hpp  MessageType.hpp  NativeFile.hpp  PieceStatus.hpp  RemoteFileHandle.hpp  StreamConcept.hpp
SimpleNetworkProtocol/FileSystem/src/: .clang-format  ByteStream.cpp  File.cpp  FileSystem.cpp  FileTree.cpp  InotifyWatcher.cpp  Leaf.cpp  MessageType.cpp  NativeFile.cpp  PiecesStatus.cpp
SimpleNetworkProtocol/FileSystemClient/: CMakeLists.txt
SimpleNetworkProtocol/FileSystemClient/include/: FuseRequestTracker.hpp
SimpleNetworkProtocol/FileSystemCommon/: CMakeLists.txt
SimpleNetworkProtocol/FileSystemCommon/include/: File.hpp  FileTree.hpp  Inode.hpp  NativeFile.hpp  PieceStatus.hpp  PiecesStatus.hpp  RemoteFileHandleRegistry.hpp  WatchEventType.hpp
SimpleNetworkProtocol/FileSystemCommon/src/: ByteStream.cpp  File.cpp  FileTree.cpp  Leaf.cpp  NativeFile.cpp  RemoteFileHandleRegistry.cpp
SimpleNetworkProtocol/FileSystemServer/: CMakeLists.txt
SimpleNetworkProtocol/FileSystemServer/include/: InotifyWatcher.hpp
SimpleNetworkProtocol/FileSystemServer/src/: InotifyWatcher.cpp
SimpleNetworkProtocol/LockedList/: .clang-tidy  CMakeLists.txt
SimpleNetworkProtocol/LockedList/include/: LockedList.hpp  MultiList.hpp  SpinLock.hpp
SimpleNetworkProtocol/Logger/: CMakeLists.txt
SimpleNetworkProtocol/Logger/include/: Logger.hpp
SimpleNetworkProtocol/Memory/: CMakeLists.txt
SimpleNetworkProtocol/Memory/include/: LocalPoolAllocator.hpp  MemoryKeyHash.hpp  MemoryLogger.hpp  PoolAllocator.hpp  ThreadSafeAllocator.hpp
SimpleNetworkProtocol/Memory/src/: LocalPoolAllocator.cpp  MemoryLogger.cpp  PoolAllocator.cpp  ThreadSafeAllocator.cpp
SimpleNetworkProtocol/Packet/: .clang-tidy  CMakeLists.txt
SimpleNetworkProtocol/Packet/include/: IPacket.hpp
SimpleNetworkProtocol/Protocol/: CMakeLists.txt
SimpleNetworkProtocol/Protocol/include/: DiskJob.hpp  FreeRecvPacketsJob.hpp  ITaskScheduler.hpp  Job.hpp  Queue.hpp  (+18 more)
SimpleNetworkProtocol/ProtocolClient/: CMakeLists.txt
SimpleNetworkProtocol/ProtocolCommon/: CMakeLists.txt
SimpleNetworkProtocol/ProtocolServer/: CMakeLists.txt
SimpleNetworkProtocol/Queue/: CMakeLists.txt
SimpleNetworkProtocol/SimpleNetworkProtocolLib/: CMakeLists.txt
SimpleNetworkProtocol/Thread/: CMakeLists.txt
SimpleNetworkProtocol/include/: Concepts.hpp  Connection.hpp  ConnectionAddr.hpp  ConnectionContext.hpp  ConnectionReader.hpp  ConnectionState.hpp  ConnectionWriter.hpp  Counter.hpp  HeaderBuffer.hpp  HeaderTypes.hpp  IConnection.hpp  IConnectionState.hpp  IInFlightQueue.hpp  IPacket.hpp  IRecvQueue.hpp  ISendQueue.hpp  ISpeedControllerState.hpp  IStatistica.hpp  IStatistics.hpp  InFlightQueue.hpp  Logger.hpp  MessageReader.hpp  MessageWriter.hpp  Packet.hpp  RecvQueue.hpp  RecvQueueStatus.hpp  Sample.hpp  SendQueue.hpp  Socket.hpp  SpeedController.hpp  Statistica.hpp  Statistics.hpp  Test.hpp  ThreadName.hpp  TimeRangedStats.hpp  UDPQueue.hpp  pch.hpp
SimpleNetworkProtocol/src/: .clang-format  .clang-tidy  Connection.cpp  Connection.hpp  ConnectionAddr.hpp  ConnectionContext.cpp  ConnectionKey.cpp  ConnectionKey.hpp  ConnectionReader.cpp  ConnectionWriter.cpp  Counter.cpp  Counter.hpp  FastTransportProtocol.cpp  FastTransportProtocol.hpp  HeaderBuffer.cpp  HeaderBuffer.hpp  HeaderTypes.hpp  IConnectionInternal.cpp  IConnectionState.cpp  IConnectionState.hpp  IInFlightQueue.hpp  IPacket.hpp  IRecvQueue.hpp  ISendQueue.hpp  ISpeedControllerState.hpp  IStatistics.cpp  InFlightQueue.cpp  InFlightQueue.hpp  Logger.hpp  MessageReader.cpp  MessageWriter.cpp  OutgoingPacket.cpp  OutgoingPacket.hpp  Packet.cpp  Packet.hpp  PeriodicExecutor.cpp  PeriodicExecutor.hpp  RecvQueue.cpp  RecvQueue.hpp  RecvThreadQueue.hpp  (+22 more)
SimpleNetworkProtocol/test/: .clang-tidy  ConnectionContextTest.cpp  ConnectionReaderTest.cpp  ConnectionStateTest.cpp  ConnectionWriter.cpp  ConnectionWriterTest.cpp  FastTransportProtocolTest.cpp  FileCacheTest.cpp  LeafTest.cpp  LockedListTest.cpp  LoggerTest.cpp  MemoryTest.cpp  MessageReaderTest.cpp  MessageWriterTest.cpp  NotifyInvalEntryJobTest.cpp  PacketTest.cpp  RecvQueueTest.cpp  RemoteFileSystemTest.cpp  SampleStatsTest.cpp  SocketTest.cpp  Statistica.cpp  Statistics.cpp  StatisticsTest.cpp  TimeRangedStatsTest.cpp  TimerTest.cpp  jprocess.cpp  jprocess.hpp
SimpleNetworkProtocol/ui/: package-lock.json  package.json
(+369 files in other folders)
